# vimconfig

./: .gitignore  README.md  altheme_bubblegum_mk2.vim  configure.sh  install.sh  powerline_shell_config.py  ps_theme_default.py  setup_libevent.sh  setup_ncurses.sh  setup_tmux.sh  tmux.conf  tmuxconfig.sh  vimconfig.sh  vimrc
configs/terminal/: Hybrid.terminal
configs/tmux/: cyan.tmuxtheme  tmux.conf
configs/vim/: airline_bubblegum.vim  apprentice.vim  project.vimproj  theme_hybrid.vim  vimrc
configs/vim/after/syntax/: cpp.vim
configs/vim/syntax/: cpp.vim
configs/vim/templates/: skeleton.py3
powerline/: ps_theme_default.py
shell/: newproj
shell/dev/: CMakeLists.txt  project.vimproj
shell/dev/binary/src/: CMakeLists.txt  main.cpp
shell/dev/dynamic/inc/: dummy_header.h
shell/dev/dynamic/src/: CMakeLists.txt  main.cpp
shell/dev/project/: CMakeLists.txt
shell/dev/src/: CMakeLists.txt  main.cpp
shell/dev/static/src/: CMakeLists.txt  main.cpp
shell/tools/: setup_libevent.sh  setup_ncurses.sh  setup_realpath.sh  setup_tmux.sh  setup_vim.sh
templates/: skeleton.c  skeleton.h  skeleton.py!  skeleton.sh
tmux/: cyan.tmuxtheme  tmux.conf
tools/: setup_libevent.sh  setup_ncurses.sh  setup_realpath.sh  setup_tmux.sh  setup_vim.sh
vim/: airline_bubblegum.vim  altheme_bubblegum_mk2.vim  apprentice.vim  theme_hybrid.vim  vimrc
vim-hybrid/colors/: hybrid.vim
vim/syntax/: cpp.vim
vim/templates/: skeleton.vimproj
